// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ColorInput.vue > renders OXD Color Input 1`] = `
"<div data-v-71eb055d="" class="oxd-color-input oxd-color-input--active" tabindex="0">
  <div data-v-71eb055d="" class="oxd-color-input-preview" style="background-color: rgb(0, 0, 0); opacity: 1; cursor: pointer;"></div>
  <transition-stub data-v-71eb055d="" name="transition-fade-down" appear="false" persisted="false" css="true">
    <!--v-if-->
  </transition-stub>
</div>"
`;

exports[`ColorInput.vue > renders OXD Color Input with color 1`] = `
"<div data-v-71eb055d="" class="oxd-color-input oxd-color-input--active" tabindex="0">
  <div data-v-71eb055d="" class="oxd-color-input-preview" style="background-color: rgb(255, 0, 0); opacity: 1; cursor: pointer;"></div>
  <transition-stub data-v-71eb055d="" name="transition-fade-down" appear="false" persisted="false" css="true">
    <!--v-if-->
  </transition-stub>
</div>"
`;

exports[`ColorInput.vue > should accept 6 digit hex input 1`] = `
"<div data-v-71eb055d="" class="oxd-color-input oxd-color-input--active oxd-color-input--focus" tabindex="0">
  <div data-v-71eb055d="" class="oxd-color-input-preview" style="background-color: rgb(0, 0, 0); opacity: 1; cursor: pointer;"></div>
  <transition-stub data-v-71eb055d="" name="transition-fade-down" appear="false" persisted="false" css="true">
    <div data-v-b319f057="" data-v-71eb055d="" role="alert" class="oxd-color-picker --positon-right">
      <div data-v-b319f057="" class="oxd-color-picker-indicator" style="top: 0px; left: 228px;"></div><canvas data-v-b319f057="" width="228" height="228" class="oxd-color-picker-palette"></canvas><input data-v-b319f057="" class="oxd-color-picker-range" type="range" max="359" value="0"><label data-v-f77d8cda="" data-v-b319f057="" class="oxd-label oxd-color-picker-label">HEX</label><input data-v-d06e05c9="" data-v-b319f057="" class="oxd-input oxd-input--active">
    </div>
  </transition-stub>
</div>"
`;

exports[`ColorInput.vue > should not accept 3 digit hex input 1`] = `
"<div data-v-71eb055d="" class="oxd-color-input oxd-color-input--active oxd-color-input--focus" tabindex="0">
  <div data-v-71eb055d="" class="oxd-color-input-preview" style="background-color: rgb(0, 0, 0); opacity: 1; cursor: pointer;"></div>
  <transition-stub data-v-71eb055d="" name="transition-fade-down" appear="false" persisted="false" css="true">
    <div data-v-b319f057="" data-v-71eb055d="" role="alert" class="oxd-color-picker --positon-right">
      <div data-v-b319f057="" class="oxd-color-picker-indicator" style="top: 0px; left: 228px;"></div><canvas data-v-b319f057="" width="228" height="228" class="oxd-color-picker-palette"></canvas><input data-v-b319f057="" class="oxd-color-picker-range" type="range" max="359" value="60"><label data-v-f77d8cda="" data-v-b319f057="" class="oxd-label oxd-color-picker-label">HEX</label><input data-v-d06e05c9="" data-v-b319f057="" class="oxd-input oxd-input--active">
    </div>
  </transition-stub>
</div>"
`;
